@@ -1,3 +1,6 @@
+* Dialer: newer FreePBX versions store trunk information in table 
+  'asterisk.trunks' instead of 'asterisk.globals' as previous versions did.
+  The dialer daemon must look now on 'asterisk.trunks' if it exists. 
 * Dialer: seems newer FreePBX versions store DAHDI trunk information as DAHDI
   not ZAP as previous versions. The dialer now needs to check under both names
   when supplied a DAHDI trunk.
